# puckshootai

./: .gitmodules  CMakeLists.txt
octave/: featureNormalize.m  puckshootai.m  sigmoid.m  sigmoidGraph.m
src/: godot_lib.cpp  puckshootai.cpp  puckshootai.hpp
tests/: helper.hpp  normalize.cpp  predict.cpp  sigmoid.cpp  train.cpp  util.hpp
